--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ConnectrGui</title>
+  <title>Connectr</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,700">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+
 </head>
 <body>
   <app-root></app-root>
+
+    <script type="text/javascript" src="assets/js/jquery-2.2.3.min.js"></script>
+
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="assets/js/tether.min.js"></script>
+
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="assets/js/mdb.min.js"></script>
+    
+    <script>
+    new WOW().init();
+    </script>
 </body>
 </html>
